--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 td{
     width:100px;
     height: 100px;
-   background: rgb(187, 186, 186);
+   background:#FF1493 ;
    font-size: 40px;
    text-align: center;
    border-radius: 10px ;
@@ -9,7 +9,7 @@ td{
 table{
     margin: 20px auto;
     border-radius: 10px;
-    color:#FF1493;
+    color:white;
 }
 body{
     background:white;
